[gd_scene load_steps=22 format=2]

[ext_resource path="res://Pic/bc911.png" type="Texture" id=1]
[ext_resource path="res://Pic/map.png" type="Texture" id=3]
[ext_resource path="res://fonts/font9.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/詳解字.tres" type="DynamicFont" id=6]
[ext_resource path="res://Fonts/1.5Pressed.tres" type="StyleBox" id=7]
[ext_resource path="res://Fonts/1.5Normal.tres" type="StyleBox" id=8]
[ext_resource path="res://fonts/font8.tres" type="DynamicFont" id=9]
[ext_resource path="res://Fonts/1.5hover.tres" type="StyleBox" id=10]
[ext_resource path="res://fonts/NotoSansTC-VariableFont_wght.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Scene/AnswerAndDescription4.gd" type="Script" id=12]

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 10.0
content_margin_right = 15.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.803922, 0.647059, 0.505882, 1 )
border_color = Color( 0.0196078, 0.00784314, 0.00784314, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=14]
size = 30
extra_spacing_top = -10
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_top = 10.0
bg_color = Color( 0.403922, 0.909804, 0.992157, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=6]
size = 40
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=7]
size = 25
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 11.0
content_margin_bottom = 20.0
bg_color = Color( 0.882353, 0.882353, 0.882353, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=15]
size = 28
outline_size = 1
outline_color = Color( 0.596078, 0.364706, 0, 0.556863 )
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.976471, 0.815686, 0.556863, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.596078, 0.364706, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="Node2D2" type="Node2D"]
script = ExtResource( 12 )

[node name="bg" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true

[node name="TextureRect" type="TextureRect" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -799.0
margin_top = -580.0
margin_right = -218.0
margin_bottom = 40.0
rect_scale = Vector2( 2.8, 2.3 )
texture = ExtResource( 3 )
expand = true

[node name="大橫線" type="Line2D" parent="bg/TextureRect"]
position = Vector2( 335.069, 62.6296 )
scale = Vector2( -1.59461, 0.76087 )
points = PoolVector2Array( -98, 100, 160, 100 )
width = 1.0
default_color = Color( 0.654902, 0.654902, 0.670588, 1 )

[node name="短線" type="Line2D" parent="bg/TextureRect"]
position = Vector2( 323.64, 62.6296 )
scale = Vector2( -1.59461, 0.76087 )
points = PoolVector2Array( -52, 100, -105, 100 )
width = 4.0
default_color = Color( 0, 0.345098, 1, 1 )

[node name="content" type="Button" parent="bg"]
margin_left = 388.0
margin_top = 193.0
margin_right = 618.0
margin_bottom = 268.0
custom_colors/font_color_disabled = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_focus = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.6, 0.6, 0.6, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
text = "故 事 內 容"

[node name="wave1" type="Button" parent="bg"]
margin_left = 616.0
margin_top = 193.0
margin_right = 846.0
margin_bottom = 268.0
custom_colors/font_color_disabled = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_focus = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.6, 0.6, 0.6, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
text = "wave 1"

[node name="wave2" type="Button" parent="bg"]
margin_left = 844.0
margin_top = 193.0
margin_right = 1074.0
margin_bottom = 268.0
custom_colors/font_color_disabled = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_focus = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.6, 0.6, 0.6, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
text = "wave 2"

[node name="wave3" type="Button" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 112.0
margin_top = -347.0
margin_right = 342.0
margin_bottom = -272.0
custom_colors/font_color_disabled = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_focus = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.6, 0.6, 1 )
custom_colors/font_color_pressed = Color( 0.6, 0.6, 0.6, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
text = "wave 3"

[node name="score" type="Button" parent="bg"]
margin_left = 1300.0
margin_top = 193.0
margin_right = 1530.0
margin_bottom = 268.0
custom_colors/font_color_disabled = Color( 0, 0.345098, 1, 1 )
custom_colors/font_color_focus = Color( 0, 0.345098, 1, 1 )
custom_colors/font_color = Color( 0, 0.345098, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.345098, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.345098, 1, 1 )
custom_fonts/font = ExtResource( 9 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
text = "score"

[node name="details" type="RichTextLabel" parent="bg"]
margin_left = 385.0
margin_top = 384.0
margin_right = 1535.0
margin_bottom = 552.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 6 )
custom_styles/normal = SubResource( 4 )

[node name="總分" type="Label" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -242.0
margin_right = -25.0
margin_bottom = -190.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "總分："

[node name="XX score" type="Label" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -264.0
margin_right = 44.0
margin_bottom = -176.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )

[node name="correct" type="Label" parent="bg"]
margin_left = 388.0
margin_top = 568.0
margin_right = 721.0
margin_bottom = 658.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/normal = SubResource( 5 )
text = "語意"
align = 1

[node name="correct_score" type="Label" parent="bg/correct"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -13.0
margin_right = 15.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
align = 1

[node name="correct_detail" type="RichTextLabel" parent="bg"]
margin_left = 388.0
margin_top = 672.0
margin_right = 721.0
margin_bottom = 832.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 7 )
custom_styles/normal = SubResource( 3 )

[node name="Completeness" type="Label" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.5
margin_top = 28.0
margin_right = 166.5
margin_bottom = 118.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/normal = SubResource( 5 )
text = "語用"
align = 1

[node name="com_score" type="Label" parent="bg/Completeness"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -13.0
margin_right = 15.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
align = 1

[node name="com_detail" type="RichTextLabel" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.5
margin_top = 132.0
margin_right = 166.5
margin_bottom = 292.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 7 )
custom_styles/normal = SubResource( 3 )

[node name="clarity" type="Label" parent="bg"]
margin_left = 1200.0
margin_top = 568.0
margin_right = 1533.0
margin_bottom = 658.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/normal = SubResource( 5 )
text = "語法"
align = 1

[node name="clar_score" type="Label" parent="bg/clarity"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -13.0
margin_right = 15.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
align = 1

[node name="clsr_detail" type="RichTextLabel" parent="bg"]
margin_left = 1200.0
margin_top = 672.0
margin_right = 1533.0
margin_bottom = 832.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 7 )
custom_styles/normal = SubResource( 3 )

[node name="AskButton" type="Button" parent="bg"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -255.0
margin_top = -205.0
margin_right = -15.0
margin_bottom = -140.0
custom_colors/font_color_hover = Color( 0.596078, 0.364706, 0, 1 )
custom_colors/font_color_pressed = Color( 0.596078, 0.364706, 0, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 17 )
custom_styles/normal = SubResource( 17 )
text = "前往追問畫面"

[node name="FinishButton" type="Button" parent="bg"]
margin_left = 1045.0
margin_top = 875.0
margin_right = 1145.0
margin_bottom = 940.0
custom_colors/font_color_hover = Color( 0.596078, 0.364706, 0, 1 )
custom_colors/font_color_pressed = Color( 0.596078, 0.364706, 0, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 17 )
custom_styles/normal = SubResource( 17 )
text = "完成"

[connection signal="pressed" from="bg/content" to="." method="_on_content_pressed"]
[connection signal="pressed" from="bg/wave1" to="." method="_on_wave1_pressed"]
[connection signal="pressed" from="bg/wave2" to="." method="_on_wave2_pressed"]
[connection signal="pressed" from="bg/wave3" to="." method="_on_wave3_pressed"]
[connection signal="pressed" from="bg/score" to="." method="_on_score_pressed"]
[connection signal="pressed" from="bg/AskButton" to="." method="_on_AskButton_pressed"]
[connection signal="pressed" from="bg/FinishButton" to="." method="_on_FinishButton_pressed"]
